--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <h3>@shotbyjudeus</h3>
   </div>
   <div
-      class="slide active"
+      class="slide"
       style="
           background-image: url('https://images.unsplash.com/photo-1563863251222-11d3e3bd3b62?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80');
         "
